# bevy-physics

./: Cargo.toml
src/: aoe.rs  auras.rs  bullet.rs  character_controller.rs  controller.rs  damage.rs  damage_text.rs  enemy.rs  fps_measure.rs  health.rs  health_bars.rs  hit_box.rs  interaction_flags.rs  lifetime.rs  main.rs  map.rs  orbit_camera.rs  particles.rs  projectile.rs  resource.rs  test.rs  utils.rs
src/server/: messages.rs  mod.rs  movement.rs  plugin.rs  udp_socket.rs
src/spells/: casting.rs  mod.rs  model.rs  plugin.rs  spell_system.rs  spells.rs
src/ui/: action_bar.rs  cast_bar.rs  mod.rs  tooltip.rs
