[package]
name = "bevy-physics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
default = true
path = "src/main.rs"

# [[bin]]
# name = "test"
# path = "src/test.rs"

[dependencies]
bevy = { version = "0.12", features = ["jpeg"] }
bevy_xpbd_3d = { version = "0.3", features = ["async-collider"] }
bevy_mod_raycast = "0.16.0"


[profile.dev.package."*"]
opt-level = 3